<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/dialog_bg"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/tip"
        android:textStyle="bold"
        android:textColor="@color/color333"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_title"
            android:textColor="@color/color333"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_writ1"
            android:layout_marginTop="9dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/color333"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_writ12"
            android:layout_marginTop="9dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/color333"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_writ2"
            android:layout_marginTop="9dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/color333"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_writ22"
            android:layout_marginTop="9dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/color333"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_writ3"
            android:layout_marginTop="9dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/color333"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_content_notice"
            android:layout_marginTop="11dp"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorFF3939"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/CommonButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tip_i_know" />
    </LinearLayout>

</LinearLayout>